--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+/* *{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+
+} */
+
+
+
+* {
+    font-family: "Open Sans", sans-serif;
+  }
+  
+  html, body { height: 100%; }
+  body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  
+  /* video {
+    width: 100%;
+    height: calc(100% - 6px);
+    transform: scaleX(-1);
+  }
+   */
